--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,8 @@ body {
   display: grid;
   grid-template-columns: 240px 1fr;
   min-height: 100vh;
+  background-color: var(--navy-blue);
+  color: #fff;
 }
 
 .sidebar {
@@ -38,7 +40,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border-right: 1px solid #ddd;
   min-height: 100vh;
   gap: 2rem;
 }
@@ -114,26 +115,37 @@ body {
 .main-header {
   display: flex;
   justify-content: space-between;
+  background-color: #2c3136;
   align-items: center;
   margin-bottom: 2rem;
-  border-bottom: 1px solid #e0e0e0;
-  padding-bottom: 1rem;
+  padding: 1rem;
 }
 
 .header-left {
   display: flex;
   font-size: 1.1rem;
+  align-items: center;
   font-weight: 500;
+}
+
+.header-center {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .header-center label {
   margin-right: 1rem;
 }
+.header-right {
+  display: flex;
+  gap: 1rem;
+}
 
 .header-right button {
   padding: 0.5rem 1.2rem;
   border: none;
-  background: #1976d2;
+  background: #62d0f1;
   color: #fff;
   border-radius: 4px;
   font-weight: 500;
@@ -159,21 +171,34 @@ body {
 }
 
 table {
-  background: #fff;
-  border: 1px solid #ccc;
+  background-color: #2c3136;
   font-size: 1rem;
+  text-align: center;
 }
 
 thead th,
 tfoot td {
-  background: #f8f8f8;
+  background: #2c3136;
   font-weight: 600;
+  padding: 1rem;
+}
+tbody tr:nth-child(odd) {
+  background-color: #3b4148;
+  color: #fff;
 }
 
 tfoot td {
   text-align: right;
   font-size: 1.05rem;
   color: #1976d2;
+}
+
+#scheduleSummary {
+  color: #62d0f1;
+}
+
+#proctor-summary {
+  color: #62d0f1;
 }
 
 /* Responsive/mobile styles */
@@ -260,10 +285,14 @@ tfoot td {
   tbody tr {
     margin-bottom: 1rem;
     border: 1px solid #ddd;
-    background: #fff;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
     padding: 0.5rem;
+  }
+
+  tbody tr {
+    background-color: #3b4148;
+    color: #fff;
   }
   td {
     border: none;
